{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 24,
  "lineage": "86c7ee86-d575-f178-0b42-ccf7842dcfea",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:998516096174:network-acl/acl-0ef8da2733acea35b",
            "default_network_acl_id": "acl-0ef8da2733acea35b",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ef8da2733acea35b",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "998516096174",
            "subnet_ids": [
              "subnet-0aba7cefb571a9754",
              "subnet-0abb056b6ac5b2e39",
              "subnet-0d5351b7c6434ac94",
              "subnet-0ea9fc6a65214a1db",
              "subnet-0f24bd6079aa0a0d2",
              "subnet-0f7f17ffc0b9bca6f"
            ],
            "tags": {
              "Name": "testing-eks-vpc-default",
              "kubernetes.io/cluster/testing-eks": "shared"
            },
            "tags_all": {
              "Name": "testing-eks-vpc-default",
              "kubernetes.io/cluster/testing-eks": "shared"
            },
            "vpc_id": "vpc-019ef4a85d2f63f0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:998516096174:route-table/rtb-0bff1482b1350f3ff",
            "default_route_table_id": "rtb-0bff1482b1350f3ff",
            "id": "rtb-0bff1482b1350f3ff",
            "owner_id": "998516096174",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "testing-eks-vpc-default",
              "kubernetes.io/cluster/testing-eks": "shared"
            },
            "tags_all": {
              "Name": "testing-eks-vpc-default",
              "kubernetes.io/cluster/testing-eks": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-019ef4a85d2f63f0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:998516096174:security-group/sg-06697ab78a146ca1e",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-06697ab78a146ca1e",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "998516096174",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "testing-eks-vpc-default",
              "kubernetes.io/cluster/testing-eks": "shared"
            },
            "tags_all": {
              "Name": "testing-eks-vpc-default",
              "kubernetes.io/cluster/testing-eks": "shared"
            },
            "vpc_id": "vpc-019ef4a85d2f63f0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f2284a1fdbee629a",
            "domain": "vpc",
            "id": "eipalloc-0f2284a1fdbee629a",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-35-154-248-131.ap-south-1.compute.amazonaws.com",
            "public_ip": "35.154.248.131",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "testing-eks-vpc-ap-south-1a",
              "kubernetes.io/cluster/testing-eks": "shared"
            },
            "tags_all": {
              "Name": "testing-eks-vpc-ap-south-1a",
              "kubernetes.io/cluster/testing-eks": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:998516096174:internet-gateway/igw-0e9f2d46e416997c3",
            "id": "igw-0e9f2d46e416997c3",
            "owner_id": "998516096174",
            "tags": {
              "Name": "testing-eks-vpc",
              "kubernetes.io/cluster/testing-eks": "shared"
            },
            "tags_all": {
              "Name": "testing-eks-vpc",
              "kubernetes.io/cluster/testing-eks": "shared"
            },
            "vpc_id": "vpc-019ef4a85d2f63f0d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f2284a1fdbee629a",
            "association_id": "eipassoc-07cd32bba016af207",
            "connectivity_type": "public",
            "id": "nat-078de1b58e87b729d",
            "network_interface_id": "eni-0d9f2f80a4895866d",
            "private_ip": "10.0.4.195",
            "public_ip": "35.154.248.131",
            "subnet_id": "subnet-0ea9fc6a65214a1db",
            "tags": {
              "Name": "testing-eks-vpc-ap-south-1a",
              "kubernetes.io/cluster/testing-eks": "shared"
            },
            "tags_all": {
              "Name": "testing-eks-vpc-ap-south-1a",
              "kubernetes.io/cluster/testing-eks": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00e00a4d8fc7c033e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-078de1b58e87b729d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00e00a4d8fc7c033e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e9f2d46e416997c3",
            "id": "r-rtb-08f8c3ff54c579c301080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08f8c3ff54c579c30",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:998516096174:route-table/rtb-00e00a4d8fc7c033e",
            "id": "rtb-00e00a4d8fc7c033e",
            "owner_id": "998516096174",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "testing-eks-vpc-private",
              "kubernetes.io/cluster/testing-eks": "shared"
            },
            "tags_all": {
              "Name": "testing-eks-vpc-private",
              "kubernetes.io/cluster/testing-eks": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-019ef4a85d2f63f0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:998516096174:route-table/rtb-08f8c3ff54c579c30",
            "id": "rtb-08f8c3ff54c579c30",
            "owner_id": "998516096174",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "testing-eks-vpc-public",
              "kubernetes.io/cluster/testing-eks": "shared"
            },
            "tags_all": {
              "Name": "testing-eks-vpc-public",
              "kubernetes.io/cluster/testing-eks": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-019ef4a85d2f63f0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009d608e66e3216f9",
            "route_table_id": "rtb-00e00a4d8fc7c033e",
            "subnet_id": "subnet-0f24bd6079aa0a0d2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01465dbb692682fb0",
            "route_table_id": "rtb-00e00a4d8fc7c033e",
            "subnet_id": "subnet-0abb056b6ac5b2e39"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fd38031b639125d",
            "route_table_id": "rtb-00e00a4d8fc7c033e",
            "subnet_id": "subnet-0d5351b7c6434ac94"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ddeccd4ab60b2af",
            "route_table_id": "rtb-08f8c3ff54c579c30",
            "subnet_id": "subnet-0ea9fc6a65214a1db"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5def060780d0eff",
            "route_table_id": "rtb-08f8c3ff54c579c30",
            "subnet_id": "subnet-0aba7cefb571a9754"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078fd1dce0296b0bb",
            "route_table_id": "rtb-08f8c3ff54c579c30",
            "subnet_id": "subnet-0f7f17ffc0b9bca6f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:998516096174:subnet/subnet-0f24bd6079aa0a0d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f24bd6079aa0a0d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "998516096174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testing-eks-vpc-private-ap-south-1a",
              "kubernetes.io/cluster/testing-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "testing-eks-vpc-private-ap-south-1a",
              "kubernetes.io/cluster/testing-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-019ef4a85d2f63f0d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:998516096174:subnet/subnet-0abb056b6ac5b2e39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abb056b6ac5b2e39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "998516096174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testing-eks-vpc-private-ap-south-1b",
              "kubernetes.io/cluster/testing-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "testing-eks-vpc-private-ap-south-1b",
              "kubernetes.io/cluster/testing-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-019ef4a85d2f63f0d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:998516096174:subnet/subnet-0d5351b7c6434ac94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5351b7c6434ac94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "998516096174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testing-eks-vpc-private-ap-south-1c",
              "kubernetes.io/cluster/testing-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "testing-eks-vpc-private-ap-south-1c",
              "kubernetes.io/cluster/testing-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-019ef4a85d2f63f0d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:998516096174:subnet/subnet-0ea9fc6a65214a1db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea9fc6a65214a1db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "998516096174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testing-eks-vpc-public-ap-south-1a",
              "kubernetes.io/cluster/testing-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "testing-eks-vpc-public-ap-south-1a",
              "kubernetes.io/cluster/testing-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-019ef4a85d2f63f0d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:998516096174:subnet/subnet-0aba7cefb571a9754",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aba7cefb571a9754",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "998516096174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testing-eks-vpc-public-ap-south-1b",
              "kubernetes.io/cluster/testing-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "testing-eks-vpc-public-ap-south-1b",
              "kubernetes.io/cluster/testing-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-019ef4a85d2f63f0d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:998516096174:subnet/subnet-0f7f17ffc0b9bca6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7f17ffc0b9bca6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "998516096174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testing-eks-vpc-public-ap-south-1c",
              "kubernetes.io/cluster/testing-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "testing-eks-vpc-public-ap-south-1c",
              "kubernetes.io/cluster/testing-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-019ef4a85d2f63f0d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:998516096174:vpc/vpc-019ef4a85d2f63f0d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ef8da2733acea35b",
            "default_route_table_id": "rtb-0bff1482b1350f3ff",
            "default_security_group_id": "sg-06697ab78a146ca1e",
            "dhcp_options_id": "dopt-07f8954eb43ca81b3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-019ef4a85d2f63f0d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bff1482b1350f3ff",
            "owner_id": "998516096174",
            "tags": {
              "Name": "testing-eks-vpc",
              "kubernetes.io/cluster/testing-eks": "shared"
            },
            "tags_all": {
              "Name": "testing-eks-vpc",
              "kubernetes.io/cluster/testing-eks": "shared"
            }
          }
        }
      ]
    }
  ]
}